# MadMario

./: .gitignore  README.md  agent.py  config.py  env_factory.py  main.py  main_vector.py  metrics.py  neural.py  play_trained.py  pyproject.toml  replay.py  replay_buffer.py  test_cuda.py  trainer.py  wrappers.py
.claude/: settings.json
docs/superpowers/specs/: 2026-06-19-vector-training-refactor-design.md  2026-06-20-package-structure-refactor-design.md  2026-06-21-stuck-penalty-training-design.md  2026-06-21-training-diagnostics-and-progress-reward-design.md
mad_mario/: cli.py  config.py
mad_mario/agent/: mario.py
mad_mario/env/: factory.py  wrappers.py
mad_mario/models/: mario_net.py
mad_mario/training/: artifacts.py  loops.py  progress.py
src/: test_cuda.py
src/mad_mario/: cli.py  config.py
src/mad_mario/agent/: checkpoint.py  mario.py  replay_buffer.py
src/mad_mario/env/: factory.py  wrappers.py
src/mad_mario/logging/: metrics.py
src/mad_mario/models/: mario_net.py
src/mad_mario/training/: artifacts.py  evaluation.py  loops.py  trainer.py
tutorial/: cheatsheet.md  tutorial_v1.ipynb  tutorial_v2.ipynb  tutorial_v2.py
