[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "madmario"
version = "0.1.0"
description = "PyTorch to build an AI-powered Mario."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gym-super-mario-bros>=9.1.0",
    "gymnasium[other]>=1.3.0",
    "matplotlib>=3.11.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
]

[project.scripts]
mad-mario = "mad_mario.cli:main"

[project.optional-dependencies]
cpu = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
cu126 = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
cu130 = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
cu132 = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu130" },
    { extra = "cu132" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu126" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu130" },
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu132" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu126" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu130" },
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cu132" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pyvirtualdisplay>=3.0; sys_platform == 'linux'",
]
